@@ -1,0 +1,2 @@
+*.py[co]
+*.egg-info
