@@ -25,7 +25,7 @@ setup(name='Products.CMFFormController',
       zip_safe=False,
       extras_require=dict(
         test=[
-            'Products.PloneTestCase',
+            'plone.app.testing',
         ]
       ),
       install_requires=[
